--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -214,6 +214,9 @@
 	margin-top: 30px;
 	float: left;
 	.accordion-section {
+		margin-bottom: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 		&:first-child {
 			.address {
 				border-top: @border;
