--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -2,6 +2,9 @@
 	width: 100%;
 	float: left;
 	position: relative;
+	.product-container {
+		margin-bottom: 20px;
+	}
 }
 .mf-product-content {	
 	border: @border;
@@ -107,6 +110,12 @@
 	.safe-block &,
 	.tags-property & {
 		margin-bottom: 15px;
+	}
+}
+.adr {
+	.shop-list-row {
+		margin-right: -10px;
+		margin-left: -10px;
 	}
 }
 .tags-property {
