--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -42,6 +42,7 @@
 @import "page/search-result.less";
 @import "page/account.less";
 @import "page/myface-checkout.less";
+@import "page/register.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
