--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -23,107 +23,9 @@
 					</p>
 
 					<!--form-horizontal-->
-					<div class="row form-horizontal form-div">
+					<div class="row form-div">
 						<div class="col-md-8 form-left add-address-form">
-		    			<div class="form-group checkout-group-1">
-	              <label for="" class="col-sm-4 control-label">Họ tên</label>
-	              <div class="col-sm-8">
-	              	<div class="rg-group-1-1">
-	              		<div class="default-dropdown">
-											<select class="form-control">
-			                  <option>Anh</option>
-			                  <option>Chị</option>
-			                </select>
-			              </div>
-		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-									</div>
-									<div class="rg-group-1-2">
-										<input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
-		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-									</div>
-	              </div>
-	            </div>
-	            <div class="form-group checkouta-group-2">
-	              <label for="" class="col-sm-4 control-label">Số điện thoại</label>
-	              <div class="col-sm-8">
-	                <input type="tel" class="form-control">
-	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	              </div>
-	            </div>
-	            <div class="form-group checkout-group-3">
-	              <label for="" class="col-sm-4 control-label">Email</label>
-	              <div class="col-sm-8">
-	                <input type="email" class="form-control">
-	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	              </div>
-	            </div>
-	            <div class="divider"></div>
-	            <div class="form-group checkout-group-4">
-	              <label for="" class="col-sm-4 control-label">Tỉnh/Thành phố</label>
-	              <div class="col-sm-8">
-	              	<div class="default-dropdown">
-		                <select class="form-control">
-		                  <option>Hồ Chí Minh</option>
-		                  <option>Hà Nội</option>
-		                  <option>Đồng Nai</option>
-		                </select>
-		              </div>
-	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	              </div>
-	            </div>
-	            <div class="form-group checkout-group-5">
-	              <label for="" class="col-sm-4 control-label">Quận/Huyện-Phường/Xã</label>
-	              <div class="col-sm-8">
-	              	<div class="city-2">
-	              		<div class="default-dropdown">
-											<select class="form-control">
-			                  <option>Quận 1</option>
-			                  <option>Quận 2</option>
-			                  <option>Quận 3</option>
-			                </select>
-			               </div>
-		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-									</div>
-									<div class="city-3">
-										<div class="default-dropdown">
-											<select class="form-control">
-			                  <option>Phường 1</option>
-			                  <option>Phường 2</option>
-			                  <option>Phường 3</option>
-			                </select>
-			              </div>
-		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-									</div>
-	              </div>
-	            </div>
-	            <div class="form-group checkout-group-6">
-	              <label for="" class="col-sm-4 control-label">Tên đường/Phố</label>
-	              <div class="col-sm-8">
-	                <input type="text" class="form-control">
-	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	              </div>
-	            </div>
-	            <div class="form-group checkout-group-7">
-	              <label for="" class="col-sm-4 control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
-	              <div class="col-sm-8">
-	                <input type="text" class="form-control">
-	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	              </div>
-	            </div>
-	            <div class="form-group p-group-1">
-		            <div class="col-sm-8 col-sm-offset-4">
-			            <div class="checkbox color-radio block">
-			            	<label class="remember-text">
-		            	 		<input type="checkbox" name="" id="" value="">
-											<span>Đặt làm mặc định</span>
-			            	</label>
-			            </div>
-			            <div class="block">
-			            	<input type="submit" class="btn btn-primary update-p-form-btn" value="Cập nhật thông tin">			            	
-			            	<a class="btn cancel-update-btn" href="">Hủy</a>
-			            </div>
-			          </div>
-	            </div>
+							{% include "block/_form-address-info.html" %}
 			    	</div>
 			    	<div class="col-md-2">
 			    		<button class="btn add-p-form-btn">
@@ -133,8 +35,8 @@
 		    	</div><!--/.form-horizontal-->
 
 					<!--address-list-->
-					<div class="accordion address-list">
-						<div class="accordion-section">
+					<div class="accordion address-list" id="accordion">
+						<div class="panel accordion-section">
 							<ul class="row address">
 						    <li class="col-md-4">
 						    	<p class="address-p-1">
@@ -146,8 +48,12 @@
 						    </li>
 						    <li class="col-md-2">
 						   		<div class="box-tools pull-right">
-				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa"><i class="fa fa-edit" aria-hidden="true"></i></button>
-				            <button type="button" class="btn btn-box-tool" title="xóa"><i class="fa fa-times" aria-hidden="true"></i></button>
+				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-1">
+				            	<i class="fa fa-edit" aria-hidden="true"></i>
+				            </button>
+				            <button type="button" class="btn btn-box-tool" title="xóa">
+				            	<i class="fa fa-times" aria-hidden="true"></i>
+				            </button>
 				          </div>
 						    </li>
 						    <li class="col-md-6">
@@ -157,113 +63,16 @@
 						    </li>
 						  </ul>
 
-						  <div class="address-details accordion-section-content" id="accordion-1" style="display: none">
-						  	<div class="row form-horizontal">
-									<div class="col-md-7 form-left" style="">
-					    			<div class="form-group checkout-group-1">
-				              <label for="" class="col-sm-4 control-label">Họ tên</label>
-				              <div class="col-sm-8">
-				              	<div class="rg-group-1-1">
-				              		<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Anh</option>
-						                  <option>Chị</option>
-						                </select>
-						              </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-												<div class="rg-group-1-2">
-													<input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-				              </div>
-				            </div>
-				            <div class="form-group checkouta-group-2">
-				              <label for="" class="col-sm-4 control-label">Số điện thoại</label>
-				              <div class="col-sm-8">
-				                <input type="tel" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-3">
-				              <label for="" class="col-sm-4 control-label">Email</label>
-				              <div class="col-sm-8">
-				                <input type="email" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="divider"></div>
-				            <div class="form-group checkout-group-4">
-				              <label for="" class="col-sm-4 control-label">Tỉnh/Thành phố</label>
-				              <div class="col-sm-8">
-				              	<div class="default-dropdown">
-					                <select class="form-control">
-					                  <option>Hồ Chí Minh</option>
-					                  <option>Hà Nội</option>
-					                  <option>Đồng Nai</option>
-					                </select>
-					              </div>
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-5">
-				              <label for="" class="col-sm-4 control-label">Quận/Huyện-Phường/Xã</label>
-				              <div class="col-sm-8">
-				              	<div class="city-2">
-				              		<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Quận 1</option>
-						                  <option>Quận 2</option>
-						                  <option>Quận 3</option>
-						                </select>
-						               </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-												<div class="city-3">
-													<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Phường 1</option>
-						                  <option>Phường 2</option>
-						                  <option>Phường 3</option>
-						                </select>
-						              </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-6">
-				              <label for="" class="col-sm-4 control-label">Tên đường/Phố</label>
-				              <div class="col-sm-8">
-				                <input type="text" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-7">
-				              <label for="" class="col-sm-4 control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
-				              <div class="col-sm-8">
-				                <input type="text" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group p-group-1">
-					            <div class="col-sm-8 col-sm-offset-4">
-						            <div class="checkbox color-radio block">
-						            	<label class="remember-text">
-					            	 		<input type="checkbox" name="" id="" value="">
-														<span>Đặt làm mặc định</span>
-						            	</label>
-						            </div>
-						            <div class="block">
-						            	<input type="submit" class="btn btn-primary update-p-form-btn" value="Cập nhật thông tin">
-						            </div>
-						          </div>
-				            </div>
+						  <div class="collapse address-details accordion-section-content" id="accordion-1">
+						  	<div class="row">
+									<div class="col-md-8 form-left" style="">
+					    			{% include "block/_form-address-info.html" %}
 						    	</div>
 						    </div>
 						  </div><!--./accordion-section-content-->
 						</div>
 
-						<div class="accordion-section">
+						<div class="panel accordion-section">
 							<ul class="row address">
 						    <li class="col-md-4">
 						    	<p class="address-p-1">
@@ -275,8 +84,12 @@
 						    </li>
 						    <li class="col-md-2">
 						   		<div class="box-tools pull-right">
-				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa"><i class="fa fa-edit" aria-hidden="true"></i></button>
-				            <button type="button" class="btn btn-box-tool" title="xóa"><i class="fa fa-times" aria-hidden="true"></i></button>
+				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-2">
+				            	<i class="fa fa-edit" aria-hidden="true"></i>
+				            </button>
+				            <button type="button" class="btn btn-box-tool" title="xóa">
+				            	<i class="fa fa-times" aria-hidden="true"></i>
+				            </button>
 				          </div>
 						    </li>
 						    <li class="col-md-6">
@@ -286,107 +99,10 @@
 						    </li>
 						  </ul>
 
-						  <div class="address-details accordion-section-content" id="accordion-2" style="display: none">
-						  	<div class="row form-horizontal">
-									<div class="col-md-7 form-left" style="">
-					    			<div class="form-group checkout-group-1">
-				              <label for="" class="col-sm-4 control-label">Họ tên</label>
-				              <div class="col-sm-8">
-				              	<div class="rg-group-1-1">
-				              		<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Anh</option>
-						                  <option>Chị</option>
-						                </select>
-						              </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-												<div class="rg-group-1-2">
-													<input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-				              </div>
-				            </div>
-				            <div class="form-group checkouta-group-2">
-				              <label for="" class="col-sm-4 control-label">Số điện thoại</label>
-				              <div class="col-sm-8">
-				                <input type="tel" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-3">
-				              <label for="" class="col-sm-4 control-label">Email</label>
-				              <div class="col-sm-8">
-				                <input type="email" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="divider"></div>
-				            <div class="form-group checkout-group-4">
-				              <label for="" class="col-sm-4 control-label">Tỉnh/Thành phố</label>
-				              <div class="col-sm-8">
-				              	<div class="default-dropdown">
-					                <select class="form-control">
-					                  <option>Hồ Chí Minh</option>
-					                  <option>Hà Nội</option>
-					                  <option>Đồng Nai</option>
-					                </select>
-					              </div>
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-5">
-				              <label for="" class="col-sm-4 control-label">Quận/Huyện-Phường/Xã</label>
-				              <div class="col-sm-8">
-				              	<div class="city-2">
-				              		<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Quận 1</option>
-						                  <option>Quận 2</option>
-						                  <option>Quận 3</option>
-						                </select>
-						               </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-												<div class="city-3">
-													<div class="default-dropdown">
-														<select class="form-control">
-						                  <option>Phường 1</option>
-						                  <option>Phường 2</option>
-						                  <option>Phường 3</option>
-						                </select>
-						              </div>
-					                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-												</div>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-6">
-				              <label for="" class="col-sm-4 control-label">Tên đường/Phố</label>
-				              <div class="col-sm-8">
-				                <input type="text" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group checkout-group-7">
-				              <label for="" class="col-sm-4 control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
-				              <div class="col-sm-8">
-				                <input type="text" class="form-control">
-				                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-				              </div>
-				            </div>
-				            <div class="form-group p-group-1">
-					            <div class="col-sm-8 col-sm-offset-4">
-						            <div class="checkbox color-radio block">
-						            	<label class="remember-text">
-					            	 		<input type="checkbox" name="" id="" value="">
-														<span>Đặt làm mặc định</span>
-						            	</label>
-						            </div>
-						            <div class="block">
-						            	<input type="submit" class="btn btn-primary update-p-form-btn" value="Cập nhật thông tin">
-						            </div>
-						          </div>
-				            </div>
+						  <div class="collapse address-details accordion-section-content" id="accordion-2">
+						  	<div class="row">
+									<div class="col-md-8 form-left" style="">
+					    			{% include "block/_form-address-info.html" %}
 						    	</div>
 						    </div>
 						  </div><!--./accordion-section-content-->
