--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -148,7 +148,6 @@
 }  
 .date-picker-group {
 	width: 100%;
-	float: left;
 	position: relative;
 	&:after {
 		content: "\f073";
@@ -169,5 +168,6 @@
 	}
 	.form-control {
 	  background-color: transparent;
+	  cursor: pointer;
 	}
 }
