--- a/myface-onface-html/src/views/block/_form-address-info.html
+++ b/myface-onface-html/src/views/block/_form-address-info.html
@@ -86,7 +86,7 @@
   </div>
   <div class="form-group p-group-1">
     <div class="col-sm-8 col-sm-offset-4">
-      <div class="checkbox color-radio block">
+      <div class="checkbox color-radio square block">
       	<label class="remember-text">
     	 		<input type="checkbox" name="" id="" value="">
 					<span>Đặt làm mặc định</span>
