--- a/myface-onface-html/src/assets/less/style/list.less
+++ b/myface-onface-html/src/assets/less/style/list.less
@@ -5,3 +5,26 @@
 		display: inline-block;
 	}
 }
+.list-with-icon {
+	width: 100%;
+	float: left;
+	padding: 0;
+	list-style: none;
+	li {
+		position: relative;
+		padding-left: 40px;
+		&:before {
+			content: "";
+	    width: 20px;
+	    height: 20px;
+	    display: inline-block;
+	    font: normal normal normal 14px/1 FontAwesome;
+	    font-size: 18px;
+	    text-align: left;
+	    position: absolute;
+	    top: 50%;
+	    left: 0;
+	    margin-top: -10px;
+		}
+	}
+}
