--- a/myface-onface-html/src/views/layout/_layout-register.html
+++ b/myface-onface-html/src/views/layout/_layout-register.html
@@ -12,11 +12,16 @@
 			</a>
 		</div>
 		<!--checkout-process-->
-		<div class="col-xs-12 col-lg-6 checkout-process">
-		</div><!--/.checkout-process-->
-		<div class="col-xs-12 col-sm-6 col-lg-3">
-			<div class="row hotline">
-				
+		<div class="col-xs-12 col-sm-6 col-lg-offset-3">
+			<div class="row help-nav">
+				<ul class="nav navbar-nav">
+		      <li class="">
+		      	<a href="#">Hướng dẫn đăng ký</a>
+		      </li>
+		      <li class="">
+		      	<a href="#">Trợ giúp</a>
+		      </li>
+		    </ul>
 			</div>
 		</div>
 	</div>
