--- a/myface-onface-html/src/views/log-in.html
+++ b/myface-onface-html/src/views/log-in.html
@@ -16,17 +16,43 @@
 		</div>
 		<div class="col-md-6 log-form-right">
 			<h4 class="form-title">Đăng nhập tài khoản</h4>
-			<div class="form-group">
-	      <label for="" class="control-label">Số điện thoại hoặc Email</label>
+			<div class="form-group lg-row-2">
+	      <label for="" class="control-label">Số điện thoại</label>
 	      <input type="tel" class="form-control" placeholder="Ví dụ: 0902559591">
 	      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 	    </div>
-			<div class="form-group">
+			<div class="form-group lg-row-3">
 	      <label for="" class="control-label">Mật khẩu</label>
 	      <input type="password" class="form-control">
 	      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
 	    </div>
+	    <div class="form-group lg-row-4">
+        <div class="checkbox color-radio square">
+	      	<label class="remember-text">
+	    	 		<input type="checkbox" name="" id="" value="">
+						<span>Nhớ tài khoản</span>
+	      	</label>
+	      </div>
+	    	<a href="#" class="forget-pass-mgs"> Quên mật khẩu?</a>
+      </div>
+      <div class="form-group lg-row-5">
+      	<input type="submit" class="btn btn-primary lg-button" value="Đăng nhập">
+      </div>
+      <div class="form-group lg-row-6">
+      	<span class="lg-span-text"> Chưa có tài khoản?</span> <a class="lg-a-text" href="register.html">Đăng ký</a>
+      </div>
 		</div>
+	</div>
+	<div class="row benifit-list">
+		<p class="col-md-12 title">Lợi ích khi đăng ký tài khoản myFace</p>
+		<ul class="list-with-icon bf-list">
+			<li class="col-md-6 item">Nhận điểm tích lũy, giảm giá, quà tặng... <u>chỉ dành riêng</u> cho thành viên.</li>
+			<li class="col-md-6 item">Ưu tiên hỗ trợ từ myFace Team nhờ có thông tin Khách hàng đầy đủ.</li>
+			<li class="col-md-6 item">Mua hàng chỉ với <b>1-click</b> hoặc vài click chuột đơn giản.</li>
+			<li class="col-md-6 item">Cùng nhiều tiện ích khác chỉ khi đăng ký bạn mới khám phá được.</li>
+			<li class="col-md-6 item">Nhiều trải nghiệm cá nhân hơn, tìm sản phẩm nhanh hơn, đúng nhu cầu của bạn.</li>
+		</ul>
+		<p class="col-md-6 bf-text">myFace Team hân hạnh được phục vụ bạn!</p>
 	</div>
 </main>
 {% endblock %}
