--- a/myface-onface-html/src/views/register.html
+++ b/myface-onface-html/src/views/register.html
@@ -11,22 +11,131 @@
       </li>
     </ul>
 		<div class="col-md-6 log-form-left">
-			<button class="btn btn-default btn-lg-by-face"><i class="fa fa-facebook"></i>Đăng nhập siêu gọn bằng Facebook</button>
-			<p class="log-text">myFace Shop khuyến khích đăng ký bằng Facebook, nhanh hơn, nhiều tiện ích hơn. Chỉ mất 3 giây để đăng ký<p>
+			<button class="btn btn-default btn-lg-by-face"><i class="fa fa-facebook"></i>Đăng ký bằng Facebook</button>
+			<p class="log-text">myFace Shop khuyến khích đăng ký bằng Facebook, nhanh hơn, nhiều tiện ích hơn. Chỉ mất 3 giây để đăng ký.<p>
 		</div>
 		<div class="col-md-6 log-form-right">
 			<h4 class="form-title">Đăng ký tài khoản</h4>
-			<div class="form-group">
-	      <label for="" class="control-label">Số điện thoại hoặc Email</label>
-	      <input type="tel" class="form-control" placeholder="Ví dụ: 0902559591">
-	      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+			<div class="register-step-1">
+				<div class="form-group">
+		      <label for="" class="control-label">Số điện thoại</label>
+		      <input type="tel" class="form-control" placeholder="Ví dụ: 0902559591">
+		      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+		    </div>
+				<div class="form-group">
+		      <label for="" class="control-label">Nhập mật khẩu</label>
+		      <input type="password" class="form-control">
+		      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+		    </div>
+		    <div class="form-group">
+		      <label for="" class="control-label">Nhập lại mật khẩu</label>
+		      <input type="password" class="form-control">
+		      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+		    </div>
+		    <div class="form-group lg-row-5">
+		    	<button type="button" class="btn btn-primary rg-step-1-btn">Tiếp tục <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+	      </div>
 	    </div>
-			<div class="form-group">
-	      <label for="" class="control-label">Mật khẩu</label>
-	      <input type="password" class="form-control">
-	      <label for="" class="error">Vui lòng nhập đủ thông tin</label>
-	    </div>
+
+	    <div class="register-step-2">
+        <div class="form-group checkout-group-1">
+          <label for="" class="control-label">Họ tên:</label>
+			    <div class="block">
+			    	<div class="rg-group-1-1">
+			    		<div class="default-dropdown">
+								<select class="form-control">
+			            <option>Anh</option>
+			            <option>Chị</option>
+			          </select>
+			        </div>
+			        <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+						</div>
+						<div class="rg-group-1-2">
+							<input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
+			        <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+						</div>
+			    </div>
+			  </div>
+        <div class="form-group checkout-group-3">
+          <label for="" class="control-label">Email</label>
+          <input type="email" class="form-control">
+          <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+        </div>        
+        <div class="form-group checkout-group-4">
+          <label for="" class="control-label">Ngày sinh</label>
+          <div class="date-picker-group">
+            <input class="form-control date-picker" placeholder="10/05/2016">
+          </div>
+          <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+        </div>
+        <div class="form-group checkout-group-5">
+          <label for="" class="control-label">Tỉnh/Thành phố</label>
+          <div class="default-dropdown">
+		        <select class="form-control">
+		          <option>Hồ Chí Minh</option>
+		          <option>Hà Nội</option>
+		          <option>Đồng Nai</option>
+		        </select>
+		      </div>
+        </div>
+        <div class="form-group checkout-group-6">
+			    <label for="" class=" control-label">Quận/Huyện-Phường/Xã</label>
+			    <div class="block">
+			    	<div class="city-2">
+			    		<div class="default-dropdown">
+								<select class="form-control">
+			            <option>Quận 1</option>
+			            <option>Quận 2</option>
+			            <option>Quận 3</option>
+			          </select>
+			         </div>
+			        <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+						</div>
+						<div class="city-3">
+							<div class="default-dropdown">
+								<select class="form-control">
+			            <option>Phường 1</option>
+			            <option>Phường 2</option>
+			            <option>Phường 3</option>
+			          </select>
+			        </div>
+			        <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+						</div>
+			    </div>
+			  </div>
+			  <div class="form-group checkout-group-7">
+			    <label for="" class="control-label">Tên đường/Phố</label>
+			    <input type="text" class="form-control">
+			  </div>
+			  <div class="form-group checkout-group-8">
+			    <label for="" class="control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
+			    <input type="text" class="form-control">
+			  </div>
+		    <div class="form-group checkout-group-9">
+	        <div class="checkbox color-radio square">
+		      	<label class="remember-text">
+		    	 		<input type="checkbox" name="" id="" value="">
+		    	 		<span>Nhấn nút hoàn tất đăng ký là bạn đã đồng ý với <br/><a class="dk-text" href="#">Điều khoản sử dụng</a> của myFace</span>
+		      	</label>
+		      </div>
+	      </div>
+        <div class="form-group p-group-1">
+          <input type="submit" class="btn btn-primary rg-step-2-btn" value="Hoàn thành đăng ký">
+        </div>
+    	</div>
 		</div>
+	</div>
+
+	<div class="row benifit-list">
+		<p class="col-xs-12 title">Lợi ích khi đăng ký tài khoản myFace</p>
+		<ul class="list-with-icon bf-list">
+			<li class="col-sm-6 item">Nhận điểm tích lũy, giảm giá, quà tặng... <u>chỉ dành riêng</u> cho thành viên.</li>
+			<li class="col-sm-6 item">Ưu tiên hỗ trợ từ myFace Team nhờ có thông tin Khách hàng đầy đủ.</li>
+			<li class="col-sm-6 item">Mua hàng chỉ với <b>1-click</b> hoặc vài click chuột đơn giản.</li>
+			<li class="col-sm-6 item">Cùng nhiều tiện ích khác chỉ khi đăng ký bạn mới khám phá được.</li>
+			<li class="col-sm-6 item">Nhiều trải nghiệm cá nhân hơn, tìm sản phẩm nhanh hơn, đúng nhu cầu của bạn.</li>
+		</ul>
+		<p class="col-sm-6 bf-text">myFace Team hân hạnh được phục vụ bạn!</p>
 	</div>
 </main>
 {% endblock %}
