--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -51,19 +51,19 @@
       		<ul class="list-group">
             <li class="li-item f-title">Hỗ trợ người mua</li>
             <li class="li-item">
-              <a href="#">Hướng dẫn người mua</a>
+              <a href="support-center.html">Hướng dẫn người mua</a>
             </li>
              <li class="li-item">
-              <a href="#">Bảo vệ người mua</a>
+              <a href="support-center.html">Bảo vệ người mua</a>
             </li>
              <li class="li-item">
-              <a href="#">Đổi trả - bảo hành</a>
+              <a href="support-center.html">Đổi trả - bảo hành</a>
             </li>
              <li class="li-item">
-              <a href="#">Giải quyết khiếu nại</a>
+              <a href="support-center.html">Giải quyết khiếu nại</a>
             </li>
             <li class="li-item">
-              <a href="#">Bảo mật thông tin</a>
+              <a href="support-center.html">Bảo mật thông tin</a>
             </li>
           </ul>
       	</div>
