--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -43,6 +43,7 @@
 @import "page/account.less";
 @import "page/myface-checkout.less";
 @import "page/register.less";
+@import "page/support-center.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
