--- a/myface-onface-html/src/views/support-center.html
+++ b/myface-onface-html/src/views/support-center.html
@@ -2,21 +2,40 @@
 {% block support-center %}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 sidebar">
-				sidebar
+			<div class="col-sm-4 col-md-3 sidebar">
+			  <div class="sidebar-label">
+			    <a class="sidebar-tab-selector" href="#"></a>
+			    <ul class="sidebar-list sidebar-drop">
+			      <li class="active">
+			        <a href="#">Tốc độ giao hàng</a>
+			      </li>
+			      <li class="">
+			        <a href="#">Hướng dẫn hủy đơn hàng</a>
+			      </li>
+			      <li class="">
+			        <a href="#"">Hướng dẫn đổi hàng & trả hàng hoàn tiền</a>
+			      </li>
+			      <li class="">
+			        <a href="#">Hướng dẫn kiểm tra đơn hàng</a>
+			      </li>
+			      <li class="">
+			        <a href="#"">Hướng dẫn cách đặt hàng</a>
+			      </li>
+			    </ul>
+			  </div>
 			</div>
-			<div class="col-md-9 supportcontent">
-				supportcontent
-				<div class="">
-					<p>Các quận trung tâm TPHCM:
-					My Mall sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.
-					Các quận ngoại thành TPHCM (Củ Chi, Hóc Môn, Cần Giờ):
-					MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.
-					Các khu vực khác do đội giao nhận MyMall.vn giao hàng:
-					MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 5-7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.
-					Các khu vực khác do đội giao nhận liên kết khác giao hàng:
-					MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.
-					Ngoài ra quý khách cũng có thể liên hệ đến số 1900636088, nhân viên bộ phận chăm sóc khách hàng MyMall.vn luôn sẵn sàng hỗ trợ quý khách kiểm tra chính xác thời gian giao nhận đơn hàng. Chúng tôi rất hân hạnh phục vụ bạn.</p>
+			<div class="col-sm-8 col-md-9 supportcontent">
+				<h2 class="sp-title">Tốc độ giao hàng</h2>
+				<div class="sp-content">
+					<p>Các quận trung tâm TPHCM:</p>
+					<p>My Mall sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
+					<p>Các quận ngoại thành TPHCM (Củ Chi, Hóc Môn, Cần Giờ):</p>
+					<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
+					<p>Các khu vực khác do đội giao nhận MyMall.vn giao hàng:</p>
+					<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 5-7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
+					<p>Các khu vực khác do đội giao nhận liên kết khác giao hàng:</p>
+					<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.
+					<p>Ngoài ra quý khách cũng có thể liên hệ đến số 1900636088, nhân viên bộ phận chăm sóc khách hàng MyMall.vn luôn sẵn sàng hỗ trợ quý khách kiểm tra chính xác thời gian giao nhận đơn hàng. Chúng tôi rất hân hạnh phục vụ bạn.</p>
 				</div>
 			</div>
 		</div>
