--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -4036,6 +4036,37 @@ h2.shop-name .shop-name-text {
     margin-top: -40px;
   }
 }
+.support-center header {
+  margin-bottom: 0;
+  border-bottom: 0;
+}
+.support-center header .container {
+  padding: 0;
+}
+.cover-img {
+  width: 100%;
+  height: 175px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+}
+.support-search {
+  max-width: 555px;
+  margin: 70px auto;
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid #dfdfdf;
+}
+.support-search .input-search {
+  border-color: transparent;
+}
+.support-nav {
+  width: 100%;
+  height: 45px;
+  background-color: #f0f1f3;
+}
 select.bs-select-hidden,
 select.selectpicker {
   display: none !important;
