--- a/myface-onface-html/src/views/layout/_layout-register.html
+++ b/myface-onface-html/src/views/layout/_layout-register.html
@@ -4,7 +4,7 @@
 {% block header%}
 <header>
 	<div class="container">
-		<div class="col-xs-12 col-sm-6 col-lg-3 myfaceshop-logo">
+		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
 			<a href="index.html" title="myFace Shop">
 				<h1 class="logo-text">
 					<img class="" src="assets/images/logo/logo.png" alt="myface">	
