--- a/myface-onface-html/src/views/layout/_layout-support-center.html
+++ b/myface-onface-html/src/views/layout/_layout-support-center.html
@@ -1,22 +1,19 @@
 {% extends "_layout-base.html" %}
-{% block page-containerclass%}checkout checkout-myface support-center{% endblock %}
+{% block page-containerclass%}support-center{% endblock %}
 <!--header-->
 {% block header%}
 <header>
 	<div class="container">
-		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
+		<div class="col-xs-12 col-sm-6 shop-logo">
 			<a href="index.html" title="myFace Shop">
 				<h1 class="logo-text">
 					<img class="" src="assets/images/logo/logo.png" alt="myface">	
 				</h1>
 			</a>
 		</div>
-		<!--checkout-process-->
-		<div class="col-xs-12 col-lg-6 checkout-process">
-		</div><!--/.checkout-process-->
-		<div class="col-xs-12 col-sm-6 col-lg-3">
+		<div class="col-xs-12 col-sm-6">
 			<div class="row hotline">
-				<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636798">1900 636 798</a></span>
+				<span class="hotline-text"><a class="hotline-number" href="tel:+1900636099">1900 636 798</a></span>
 				<span class="note">(08-18h, T2-T7)</span>
 			</div>
 		</div>
@@ -26,8 +23,14 @@
 <!--page-container-->
 {% block page-container %}
 <main>
-	<div class="cover-img">
-		<div  class="container">img
+	<div class="cover-img" style="background-image: url(assets/images/upload/banner/cover-img.jpg)">
+		<div  class="container">
+			<div class="input-group support-search">
+			  <input type="text" aria-label="..." class="form-control input-search" placeholder="Xin chào! myFace Shop có thể giúp được gì cho bạn!">
+			  <div class="input-group-btn">
+			    <button class="btn btn-default btn-search"></button>
+			  </div>
+			</div>
 		</div>
 	</div>
 	<nav class="support-nav">
